oficina-service-k8s/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficina
  labels:
    name: oficina
    env: local
