oficina-service-k8s/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oficina-deployment
  namespace: oficina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: oficina
  template:
    metadata:
      labels:
        app: oficina
    spec:
      containers:
        - name: oficina-service
          image: oficina-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
